# ChildProject

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  child-project  convert.py  env.yml  env_linux.yml  env_macos.yml  env_windows.yml  import_annotations.py  import_data.py  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  stats.py  tox.toml  validate_raw_data.py
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: publish.yml  release-tests.yml  tests.yml
ChildProject/: ChildProject.py  VTCAnnotation.py  __init__.py  annotations.py  cmdline.py  converters.py  messages.py  metrics.py  plots.py  projects.py  tables.py  utils.py
ChildProject/analysis/: __init__.py
ChildProject/pipelines/: __init__.py  anonymize.py  conversationFunctions.py  conversations.py  conversion.py  converters.py  derivations.py  derived_annotations.py  eafbuilder.py  fake_panoptes.py  metrics.py  metricsFunctions.py  pipeline.py  processors.py  reliability.py  sampler.py  samplers.py  utils.py  zooniverse.py
ChildProject/templates/: basic.etf  basic.pfsx  native.etf  native.pfsx  non-native.etf  non-native.pfsx
ChildProject/types/: annotations.py
docs/: CHEATSHEET.md  FORMATTING_TEMPLATE.md  README.md  REUSE.md  TOOLS.md  TUTORIAL_REUSE.md  TUTORIAL_VANDAM.md  ZOONIVERSE.md  _config.yml  generate_docs.py  pull_request_template.md
docs/source/: ChildProject.pipelines.rst  ChildProject.rst  ChildProject.templates.rst  annotations.rst  api-annotations.rst  api-extract-metrics.rst  api-metrics.rst  cheatsheet.rst  conf.py  conversations.rst  converters.rst  elan.rst  examples.rst  format.rst  full-project-from-scratch.rst  getting-data.rst  index.rst  install.rst  introduction.rst  metrics.rst  modules.rst  processors.rst  projects.rst  readme.rst  reuse.rst  samplers.rst  tools.rst  vandam.rst  zooniverse.rst
docs/templates/: EXTANT.md  FORMATTING.md  PROJECTS.md  SAMPLERS.md  TOOLS.md  ZOONIVERSE.md
examples/: agreements.py  import_vtc.py  zooniverse.py
examples/invalid_raw_data/: children.csv
examples/valid_raw_data/: children.csv  fake_readme.md
tests/: conftest.py  test_annotations.py  test_cli.py  test_conversationFunctions.py  test_conversations.py  test_convert.py  test_derivations.py  test_documentation.py  test_eaf.py  test_import.py  test_metrics.py  test_pipelines.py  test_projects.py  test_reliability.py  test_reliability_integration.py  test_reliability_unit.py  test_samplers.py  test_utils.py  test_validation.py  test_zooniverse.py
tests/data/: aclew.csv  alpha.csv  chunks_test.csv  chunks_test_orphan.csv  confmatrix.csv  conversations_parameters.yml  eaf_any_tier.eaf  eaf_segments.csv  gamma.csv  grid.csv  input_import_duration_overflow.csv  input_importoverlaps.csv  input_invalid.csv  input_reimport.csv  lena_its.csv  list_features_conv.csv  list_metrics.csv  parameters_metrics.yml  segments.csv  textgrid.TextGrid  time_range_annotations.csv  time_range_recordings.csv  vandam.cha  vcm.rttm
tests/truth/: .~lock.aclew_metrics.csv#  aclew_metrics.csv  ages.csv  alice.csv  cha.csv  csv.csv  custom_conversations.csv  custom_metrics.csv  docs.csv  eaf.csv  eaf_any_tier.csv  eaf_solis.csv  err_overlap.csv  (+25 more)
(+69 files in other folders)
